refactor(tests): streamline SecurityHeadersIntegrationTest by removing redundant endpoints and enhancing header assertions